--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -8,4 +8,23 @@
 }
 html{
   scroll-behavior: smooth;
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  font-family: Outfit;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* Prevent flickering */
+html {
+  visibility: visible;
+  opacity: 1;
+  transition: background-color 0.3s ease-in-out;
 }
